fix extra padding under duration picker buttons

--- a/src/modules/app/css/durationPicker.scss
+++ b/src/modules/app/css/durationPicker.scss
@@ -13,6 +13,11 @@ duration-picker{
 
 		.time-picker-container{
 			width: 100%;
+
+			.button-container{
+				position: absolute;
+				bottom: 0;
+			}
 		}
 	}
 }
